# CPro

./: .gitignore  CMakeLists.txt  CMakePresets.json  CPro.code-profile  CPro.code-workspace  README.md  TODO.md  run.sh  vcpkg.backup.json  vcpkg.json
.github/workflows/: run.yml
Day1/: CMakeLists.txt  Main.cpp  run
Day2/: CMakeLists.txt
Day2/Driver/: Main.cpp
Day2/Logic/: Logic.h
cmake/: init.cmake
docs/: modules.md
shell/: functions.sh  functions_linux.sh  functions_mac.sh  functions_win.sh  help.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_main.cpp
src/modlib/: CMakeLists.txt  modlib.cxx
src/textlib/: CMakeLists.txt  textlib.h  textlib_kernel.cpp
src/ui/: CMakeLists.txt  ui.h  ui_enums.h  ui_lib.h  ui_panel.h  ui_widget.cpp  ui_widget.h
src/widget/: CMakeLists.txt  widget.cpp  widget.h
test/: CMakeLists.txt
test/ui_test/: CMakeLists.txt  ui_test_enums.cpp  ui_test_widget.cpp
